# exceptionops-lite

./: .gitignore  README.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  dify.py  main.py  models.py  rules.py  schemas.py  seed_loader.py
backend/tests/: test_api.py
dify/: code_node_context_compactor.py  workflow.blueprint.yml
dify/experimental/: human-review-extension.md
dify/prompts/: system_prompt.md
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  INTERVIEW_TALKING_POINTS.md  PILOT_UPGRADE_ROADMAP.md  PROMPT_RULES.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: RuleChip.tsx  SectionCard.tsx  StatusBadge.tsx  Timeline.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: CaseDetailPage.tsx  InboxPage.tsx
scripts/: bootstrap.sh  dev_backend.sh
seed/: knowledge_base_manifest.json  mock_records.json
seed/sop/: amount-dispute.md  evidence-completion.md  quantity-reconcile.md  review-standard.md  stale-escalation.md  status-freeze.md
