[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exceptionops-lite-backend"
version = "0.1.0"
description = "Thin FastAPI backend for the ExceptionOps Lite demo."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.9,<3.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

